--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .nav {
-  background-color: black;
+  background-color: #ffaa00;
   color: #000000;
   list-style: none;
   text-align: right;
