--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .nav {
   background-color: #ffaa00;
-  color: #000000;
+  color: #ffaa00;
   list-style: none;
   text-align: right;
   padding: 30px 0 30px 0;
