--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 }
 
 .nav {
-  background-color: #ffaa00;
-  color: #ffaa00;
+  background-color: #0d3b3d;
+  color: #0d3b3d;
   list-style: none;
   text-align: right;
   padding: 30px 0 30px 0;
