--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .logo {
   color: #000000;
   float: left;
-  padding-left: 10px;
+  padding: 0px;
   font-size: 25px;
   font-weight: bold;
 }
