--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 .nav {
-  background-color: #0d3b3d;
-  color: #0d3b3d;
+  background-color: #ffaa00;
+  color: #ffaa00;
   list-style: none;
   text-align: right;
   padding: 30px 0 30px 0;
@@ -27,8 +27,9 @@ body {
 }
 
 .logo {
+  color: #000000;
   float: left;
-  top: 25px;
-  left: 25;
-  
+  padding-left: 25px;
+  font-size: 25px;
+  font-weight: bold;
 }
