--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ body {
 }
 
 .logo {
-  color: #000000;
-  float: left;
-  padding-left: 25px;
-  font-size: 25px;
-  font-weight: bold;
-  top:-25;
+  margin-top: 10px;
   
 }
