--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body {
 .nav {
   background-color: #0d3b3d;
   color: #0d3b3d;
+  position: absolute;
   list-style: none;
   text-align: right;
-  padding: 10px 0 10px 0;
+  padding: 0px 0 0px 0;
 }
 
 .nav > li {
