--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background-color: #0d3b3d;
   color: #0d3b3d;
   list-style: none;
-  text-align: right;
+  text-align: center;
   padding: 30px 0 30px 0;
 }
 
